CMBSandbox4/src/objects/Bill__c.object
<CustomObject>
    <description>This is for vendor bills</description>
    <fields>
        <fullName>AP_Group1__c</fullName>
        <inlineHelpText>This will copy the AP Group from the Account record</inlineHelpText>
        <label>AP Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Roll_Up__c</fullName>
        <label>Amount (Roll-Up)</label>
        <summarizedField>Bill_Line_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Bill_Line_Item__c.Bill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amt_Due_Based_on_Rate__c</fullName>
        <formula>Vendor__r.Contractor_Rate__c *  Hours_on_Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amt Due (Based on Rate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_Due__c</fullName>
        <formula>Amount_Due__c   -  Bill_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_Paid__c</fullName>
        <description>Bill Amount Paid is roll up on Details Transaction_Line_Debit__c</description>
        <label>Bill Amount Paid</label>
        <summarizedField>Transaction_Line_Debit__c.Amount__c</summarizedField>
        <summaryForeignKey>Transaction_Line_Debit__c.Bill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bill_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <label>Billable% (Internal Staff)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <formula>if(  AND( NOT(ISPICKVAL( Status__c , &quot;Paid&quot;)) ,Due_Date__c &lt; TODAY()) , TODAY() - Due_Date__c ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Bill__c</fullName>
        <formula>IF(  OR(ISPICKVAL(Status__c , &quot;Paid&quot;), ISPICKVAL(Status__c , &quot;Cancelled&quot;)),null,
(today() -  Bill_Date__c ))</formula>
        <label>Days Since Bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date_Formula__c</fullName>
        <formula>IF(Due_Date__c &lt;TODAY(),TODAY(),Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date (Formula)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>Today() + 30</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_3_Digits_of_Vendor__c</fullName>
        <formula>left( Vendor__r.Name , 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First 3 Digits of Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Match_Harvest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hours Match Harvest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_RollUp__c</fullName>
        <label>Hours (RollUp)</label>
        <summarizedField>Bill_Line_Item__c.Hours__c</summarizedField>
        <summaryForeignKey>Bill_Line_Item__c.Bill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_based_on_rate__c</fullName>
        <formula>Amount_Due__c / Vendor__r.Contractor_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours (based on rate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_on_Invoice__c</fullName>
        <label>Hours (#)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_on_Timesheet__c</fullName>
        <label>Hours on Timesheet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_LineItems__c</fullName>
        <formula>IF(

 Amount_Roll_Up__c =  Amount_Due__c , IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Matches&quot;), 
IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Matching&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matching LineItems?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>This will determine the importance of paying the bill fast</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ref__c</fullName>
        <label>Ref/Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - Needs Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Ready to Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Wire Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid - Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Clarification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Due on Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Period_End__c</fullName>
        <label>Time Period - End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Period_Start__c</fullName>
        <label>Time Period - Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <inlineHelpText>The month that the service was perfomed</inlineHelpText>
        <label>Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timesheet_Hours_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timesheet Hours Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timesheet_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timesheet Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timesheets_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timesheets Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products &amp; Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Salary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Invoice - No Time Entries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Invoice - With Time Entries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upload_to_SF__c</fullName>
        <label>Upload to SF</label>
        <picklist>
            <picklistValues>
                <fullName>Need to Upload</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor__c</columns>
        <columns>Amount_Roll_Up__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Memo__c</columns>
        <columns>Ref__c</columns>
        <columns>Terms__c</columns>
        <columns>Upload_to_SF__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Need_SF_Upload</fullName>
        <columns>NAME</columns>
        <columns>Hours_based_on_rate__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Vendor__c</columns>
        <columns>Time_Period__c</columns>
        <columns>Memo__c</columns>
        <columns>Status__c</columns>
        <columns>Days_Since_Bill__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Upload_to_SF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Upload_to_SF__c</field>
            <operation>notEqual</operation>
            <value>No Need,Completed</value>
        </filters>
        <label>Need SF Upload</label>
    </listViews>
    <listViews>
        <fullName>New_Last_3_days</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor__c</columns>
        <columns>Amount_Roll_Up__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Memo__c</columns>
        <columns>Ref__c</columns>
        <columns>Terms__c</columns>
        <columns>Upload_to_SF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>New Last 3 days</label>
    </listViews>
    <listViews>
        <fullName>Paid</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <columns>Amount_Roll_Up__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Memo__c</columns>
        <columns>Ref__c</columns>
        <columns>Terms__c</columns>
        <columns>Upload_to_SF__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Paid</label>
    </listViews>
    <listViews>
        <fullName>Paid_Last_3_Days</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Amount_Roll_Up__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Date_Paid__c</columns>
        <columns>Memo__c</columns>
        <columns>Ref__c</columns>
        <columns>Terms__c</columns>
        <columns>Upload_to_SF__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <filters>
            <field>Date_Paid__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>Paid - Last 3 Days</label>
    </listViews>
    <listViews>
        <fullName>Unpaid</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>AP_Group1__c</columns>
        <columns>Bill_Amount_Due__c</columns>
        <columns>Status__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Days_Since_Bill__c</columns>
        <columns>Days_Past_Due__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Ref__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Unpaid</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_2</fullName>
        <columns>NAME</columns>
        <columns>Hours_based_on_rate__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Vendor__c</columns>
        <columns>Time_Period__c</columns>
        <columns>Memo__c</columns>
        <columns>Status__c</columns>
        <columns>Days_Since_Bill__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Upload_to_SF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Unpaid 2</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_20_days</fullName>
        <columns>NAME</columns>
        <columns>Hours_based_on_rate__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Vendor__c</columns>
        <columns>Time_Period__c</columns>
        <columns>Memo__c</columns>
        <columns>Status__c</columns>
        <columns>Days_Since_Bill__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Upload_to_SF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <filters>
            <field>Days_Since_Bill__c</field>
            <operation>greaterOrEqual</operation>
            <value>20</value>
        </filters>
        <label>Unpaid (20+ days)</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_30_days</fullName>
        <columns>NAME</columns>
        <columns>Hours_based_on_rate__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Ref__c</columns>
        <columns>Vendor__c</columns>
        <columns>Status__c</columns>
        <columns>Days_Since_Bill__c</columns>
        <columns>Bill_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <filters>
            <field>Days_Since_Bill__c</field>
            <operation>greaterOrEqual</operation>
            <value>30</value>
        </filters>
        <label>Unpaid (30+ days)</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_A_Priority</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>AP_Group1__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Since_Bill__c</columns>
        <columns>Days_Past_Due__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Amount_Due__c</columns>
        <columns>Ref__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <filters>
            <field>AP_Group1__c</field>
            <operation>contains</operation>
            <value>High</value>
        </filters>
        <label>Unpaid - A Priority</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_AppShark</fullName>
        <columns>NAME</columns>
        <columns>Time_Period__c</columns>
        <columns>Memo__c</columns>
        <columns>Status__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Ref__c</columns>
        <columns>Terms__c</columns>
        <columns>Upload_to_SF__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor__c</field>
            <operation>contains</operation>
            <value>App Shark</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Unpaid: AppShark</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_Astrea</fullName>
        <columns>NAME</columns>
        <columns>Ref__c</columns>
        <columns>Status__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Terms__c</columns>
        <columns>Upload_to_SF__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor__c</field>
            <operation>contains</operation>
            <value>Astrea</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Unpaid: Astrea</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_Eternus</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Amount_Due__c</columns>
        <columns>Bill_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Ref__c</columns>
        <columns>Terms__c</columns>
        <columns>Upload_to_SF__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor__c</field>
            <operation>contains</operation>
            <value>Eternus</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Unpaid: Eternus</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_High_Priority</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Since_Bill__c</columns>
        <columns>Days_Past_Due__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Amount_Due__c</columns>
        <columns>Ref__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <filters>
            <field>AP_Group1__c</field>
            <operation>contains</operation>
            <value>high</value>
        </filters>
        <label>Unpaid - High Priority</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_Med_Priority</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Since_Bill__c</columns>
        <columns>Days_Past_Due__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Amount_Due__c</columns>
        <columns>Ref__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Unpaid - Med Priority</label>
    </listViews>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Bill_as_Paid_when_there_is_not_Amount_Pa</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
AND( 
ISBLANK(Date_Paid__c) , 
ISPICKVAL(Status__c, &quot;Paid&quot;) 
),
AND(
Bill_Amount_Paid__c &lt;0.05,
ISPICKVAL( Status__c, &quot;Paid&quot;) 
)
)</errorConditionFormula>
        <errorMessage>Cannot mark the Bill as Paid when there is not Amount Paid or Date Paid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Amount_or_Hours_on_Invoice</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
isblank( Amount_Due__c  ),
isblank(Hours_on_Invoice__c )
)</errorConditionFormula>
        <errorMessage>Need to enter either the Amount of the Hours</errorMessage>
    </validationRules>
</CustomObject>